# RedHerring

./: .gitignore  .gitmodules  README.md
configuration/: CMakeLists.txt  odroid-vnc-setup.sh  read-config  read-config.cpp  ros-packages.list  ros-setup.sh  ros-setup.sh~  setup.sh  vncserver
devel/: .catkin  setup.sh
devel/lib/imu/: imu_node
devel/lib/pkgconfig/: thrusters.pc
functional_tests/: functional_tests.py  launchfile_creator.py  template_launch_file.launch
functional_tests/motor_controller/: motor_controller.py
functional_tests/ros_nodes/motor_controller/: motor_controller.py
libs/utilities/include/: config_files.hpp
libs/utilities/src/: config_files.cpp
ros/: env.sh
ros/devel/: .rosinstall
ros/launchfiles/: auv.launch  herring-red-joystick.xml  herring-red.xml  redherring-auv.launch  rov.launch
ros/src/.tointegrate/.grabber/: CMakeLists.txt  package.xml
ros/src/.tointegrate/.grabber/src/: client_node.cpp  client_node.h  grabber_node.cpp  publisher_node.cpp  service_node.cpp
ros/src/.tointegrate/.grabber/srv/: GrabberCommand.srv
ros/src/.tointegrate/.joystick/joystick_plugin/: CMakeLists.txt  package.xml
ros/src/.tointegrate/.joystick/joystick_plugin/src/: joystick_plugin (copy).cc  joystick_plugin.cc
ros/src/.tointegrate/.joystick/red_joystick/: CMakeLists.txt  package.xml
ros/src/.tointegrate/.joystick/red_joystick/src/: joystick_node.cpp
ros/src/.tointegrate/.latency_test/: CMakeLists.txt  package.xml
ros/src/.tointegrate/.latency_test/include/latency_test/: latencyConfig.txt
ros/src/.tointegrate/.latency_test/msg/: dataSizeOne.msg
ros/src/.tointegrate/.latency_test/src/: latency_master.cpp  latency_slave.cpp
ros/src/.tointegrate/.lights/: CMakeLists.txt  package.xml
ros/src/.tointegrate/.lights/include/lights/: lightsConfig.txt
ros/src/.tointegrate/.lights/src/: lights_node.cpp
ros/src/.tointegrate/.plugins/shark_plugin/: CMakeLists.txt  package.xml
ros/src/.tointegrate/.plugins/shark_plugin/src/: shark_plugin.cc
ros/src/.tointegrate/.serial/serialTest/: CMakeLists.txt  package.xml
ros/src/.tointegrate/.serial/serialTest/src/: serialtest_node.cpp
ros/src/.tointegrate/.tf/tf_test/: CMakeLists.txt  package.xml
ros/src/.tointegrate/.tf/tf_test/launch/: start_demo.launch
ros/src/.tointegrate/.tf/tf_test/src/: tf_cam1_broadcaster.cpp  tf_googly_broadcaster.cpp  tf_vid1_broadcaster.cpp  tf_world_broadcaster.cpp  tf_world_listener.cpp
ros/src/.tointegrate/.tf/tf_tutorial/: CMakeLists.txt  package.xml
ros/src/.tointegrate/.tf/tf_tutorial/launch/: start_demo.launch
ros/src/.tointegrate/.tf/tf_tutorial/src/: frame_tf_broadcaster.cpp  turtle_tf_broadcaster.cpp  turtle_tf_listener.cpp
ros/src/.tointegrate/.thrustors/: CMakeLists.txt
ros/src/.tointegrate/.thrustors/msg/: Sensitivity.msg  thrusterTemperatures.msg
ros/src/.tointegrate/.thrustors/src/: auv_thruster_control.cpp  thruster_node.cpp
ros/src/.tointegrate/.thrustors/thrusters/: package.xml
ros/src/.tointegrate/.vision/opencvtest/: CMakeLists.txt  package.xml
ros/src/.tointegrate/.vision/opencvtest/src/: imageConverter.cpp  imgloader.cpp
ros/src/.tointegrate/.vision/rov_camera/: CMakeLists.txt  package.xml
ros/src/.tointegrate/.vision/rov_camera/msg/: CameraControl.msg
ros/src/.tointegrate/.vision/rov_camera/src/: auv_cam.cpp  gui_cam.cpp
ros/src/auv_controls/: CMakeLists.txt  package.xml
ros/src/auv_controls/src/: ai.cpp
ros/src/gui/: mainpage.dox
ros/src/imu/: CMakeCache.txt  CMakeLists.txt
ros/src/imu_int/: package.xml
ros/src/joystick/: CMakeLists.txt  package.xml
ros/src/keyboard_interface/: CMakeLists.txt  package.xml
ros/src/motor_controller/: CMakeLists.txt  package.xml
ros/src/motor_controller/launchfiles/: motor_controller.launch  motors.launch  movement.launch
ros/src/motor_controller/msg/: keyboard.msg
ros/src/motor_controller/src/: client.cpp  controller.cpp  motor_controller.cpp  motor_controller_client.cpp  movement.cpp  navigation.cpp
ros/src/motor_controller/srv/: movement_command.srv
ros/src/motor_driver/: CMakeLists.txt  readme.txt
ros/src/redgui/: CMakeLists.txt  package.xml
ros/src/rov_controls/: CMakeLists.txt  package.xml
ros/src/rov_controls/src/: keyboard_node.cpp
ros/src/system_manager/: CMakeLists.txt
ros/src/system_tests/: emulator.py  functional_tests.py  motor_controller.py
ros/src/vision/: CMakeLists.txt  package.xml
ros/src/vision/include/: video_api.h
ros/src/vision/launchfiles/: camera_one.launch  camera_two.launch  image_sender.launch  image_sender2.launch
ros/src/vision/src/: colour_detection.cpp  image_reciever.cpp  image_sender.cpp  image_sender2.cpp  reciever.cpp  webcam.cpp
ros/src/vision/srv/: enable_detection.srv
ros_legacy/imu/: Makefile
ros_legacy/imu/gtest/: Makefile  cmake_install.cmake  gtest.cbp
ros_legacy/imu_int/: CMakeLists.txt
ros_legacy/imu_int/src/: IMU_Int_Data.h  imu_int_node.cpp
ros_legacy/imu_int/test_data/: imu_output_1.txt  imu_output_3.txt
src/imu/: CMakeLists.txt  CTestTestfile.cmake  cmake_install.cmake  imu.cbp
src/imu/catkin_generated/: generate_cached_setup.py  imu-msg-extras.cmake.develspace.in  pkg.installspace.context.pc.py  setup_cached.sh
src/imu/catkin_generated/installspace/: imu-msg-extras.cmake  imu.pc  imuConfig.cmake  setup.sh
src/imu/cmake/: imu-genmsg.cmake
src/imu/devel/: .rosinstall  _setup_util.py
src/imu/devel-DCMAKE_INSTALL_PREFIX=/install/share/imu/cmake/: imu-msg-paths.cmake
src/imu/devel/lib/pkgconfig/: imu.pc
src/imu/devel/share/imu/cmake/: imuConfig.cmake
src/imu/msg/: IMU_Data.msg
src/imu_int/msg/: IMU_Int_Data.msg
src/imu_int/src/: IMU_Data.h  ImuIntCommand.h  ImuIntCommandRequest.h  ImuIntCommandResponse.h
src/imu_int/srv/: ImuIntCommand.srv
src/keyboard_interface/src/: rov_keyboard.cpp
src/main_controller/: CMakeLists.txt  package.xml
src/main_controller/src/: main_controller.cpp
src/main_controller/srv/: setMotor.srv
src/motor_driver/: package.xml
src/motor_driver/src/: client_node.cpp  motor_driver_node.cpp
utilities/: read-config.cpp
(+99 files in other folders)
